[tool.poetry]
name = "chaos"
version = "0.1.0"
description = ""
authors = ["Yakovlev Kll"]

[tool.poetry.dependencies]
python = "3.7"
numpy = "1.18.1"
numba = "0.48.0"
PyQt5 = "5.14.1"
pyqtgraph = "0.10.0"
matplotlib = "3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
